# envy-tui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.config/: config.yml  config256.yml  configtruecolor.yml
.github/workflows/: release.yml
examples/: customize-dashboard.vhs  tabs.vhs
examples/vhs/: generate.sh  tabs.tape
src/: action.rs  app.rs  config.rs  config.yml  consts.rs  handlers.rs  logger.rs  main.rs  parser.rs  render.rs  tui.rs  utils.rs  wss.rs
src/components/: actionable_list.rs  component.rs  handlers.rs  home.rs  jsonviewer.rs  mod.rs  websocket.rs
src/mock/: mod.rs
src/plugins/: graphql.rs
src/services/: websocket.rs
