[package]
name = "cli-network-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
http = "0.2.9"
futures-util = "0.3.28"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
url = "2.4.1"
