[package]
name = "cli-network-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream", "serde"] }
http = "0.2.9"
ratatui = { version = "0.24.0", features = ["all-widgets"] }
serde = { version = "1.0.188" , features = ["derive"] }
serde_json = { version = "1.0.107", features = ["preserve_order"] }
futures-util = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
url = "2.4.1"
tungstenite = "0.20.0"
futures-channel = "0.3.28"
clippers = "0.1.2"
regex = "1.9.5"
serde_yaml = "0.9.25"
pretty_assertions = "1.4.0"
chrono = "0.4.31"

[profile.release]
debug = true
